# OpenSimRT

./: .clang-format  .gitattributes  .gitignore  .travis.yml  BUILD_OPENSIM.md  CMakeLists.txt  README.md  test.osim
.github/workflows/: continuous-integration.yml  env_variables
OpenSimRT/: CMakeLists.txt  Settings.h.in
OpenSimRT/Common/: CMakeLists.txt  INIReader.cpp  INIReader.h  Ini.h
OpenSimRT/Common/include/: CSVLogger.h  CircularBuffer.h  DynamicLibraryLoader.h  Exception.h  INIReader.h  Measure.h  OpenSimUtils.h  SignalProcessing.h  SlidingWindow.h  SyncManager.h  TypeHelpers.h  Utils.h  Visualization.h
OpenSimRT/Common/src/: CSVLogger.cpp  (+4 more)
OpenSimRT/IMU/: CMakeLists.txt
OpenSimRT/RealTime/: CMakeLists.txt
OpenSimRT/RealTime/applications/: RealTimePipeline.cpp
OpenSimRT/RealTime/bank/: GRFMPredictionOptimization.cpp  TestGRFMPredictionOptimizationFromFile.cpp
OpenSimRT/RealTime/experimental/: CMakeLists.txt
OpenSimRT/RealTime/experimental/GroundWrenchPrediction/: CMakeLists.txt
OpenSimRT/RealTime/experimental/GroundWrenchPrediction/include/: AccelerationBasedPhaseDetector.h  ExternalAccelerationBasedPhaseDetector.h  ExternalForceBasedPhaseDetector.h  GRFMPrediction.h
OpenSimRT/RealTime/experimental/GroundWrenchPrediction/src/: ExternalAccelerationBasedPhaseDetector.cpp
OpenSimRT/RealTime/experimental/MarkerReconstruction/: CMakeLists.txt
OpenSimRT/RealTime/experimental/MarkerReconstruction/tests/: TestMarkerReconstruction.cpp
OpenSimRT/RealTime/experimental/RealTimeAnalysisExtended/: CMakeLists.txt
OpenSimRT/RealTime/experimental/RealTimeAnalysisExtended/src/: RealTimeAnalysisExtended.cpp
OpenSimRT/RealTime/experimental/RealTimeAnalysisExtended/tests/: TestRTExtFromFile.cpp
OpenSimRT/RealTime/include/: AccelerationBasedPhaseDetector.h  ContactForceBasedPhaseDetector.h  GRFMPrediction.h  GRFMPredictionOptimization.h  GaitPhaseDetector.h  InverseDynamics.h  InverseKinematics.h  JointReaction.h  MarkerReconstruction.h  MuscleOptimization.h  PhaseDetector.h  RealTimeAnalysis.h  RealTimeAnalysisLegacy.h  SignalProcessing.h  Simulation.h  SimulationUtils.h  SymbolicMomentArm.h
OpenSimRT/RealTime/include/experimental/: AccelerationBasedPhaseDetector.h  ContactForceBasedPhaseDetector.h  ExternalAccelerationBasedPhaseDetector.h  GRFMPrediction.h  GaitPhaseDetector.h  MarkerReconstruction.h  RealTimeAnalysisExtended.h
OpenSimRT/RealTime/include/internal/: RealTimeExports.h  RegisterPlugin.h
OpenSimRT/RealTime/src/: AccelerationBasedPhaseDetector.cpp  ContactForceBasedPhaseDetector.cpp  GRFMPrediction.cpp  GRFMPredictionOptimization.cpp  GaitPhaseDetector.cpp  InverseDynamics.cpp  InverseKinematics.cpp  JointReaction.cpp  MarkerReconstruction.cpp  MuscleOptimization.cpp  PhaseDetector.cpp  RealTimeAnalysis.cpp  RealTimeAnalysisLegacy.cpp  SignalProcessing.cpp  SimulationUtils.cpp  SymbolicMomentArm.cpp
OpenSimRT/RealTime/src/experimental/: AccelerationBasedPhaseDetector.cpp  ContactForceBasedPhaseDetector.cpp  ExternalAccelerationBasedPhaseDetector.cpp  ExternalForceBasedPhaseDetector.cpp  GRFMPrediction.cpp  GaitPhaseDetector.cpp  MarkerReconstruction.cpp  RealTimeAnalysisExtended.cpp
OpenSimRT/RealTime/src/internal/: RegisterPlugin.cpp
OpenSimRT/RealTime/tests/: Test2StagePipeline.cpp  TestAccelerationGRFMPredictionFromFile.cpp  TestCircularBuffer.cpp  TestContactForceGRFMPredictionFromFile.cpp  TestGRFMPredictionFromFile.cpp  TestGRFMPredictionOptimizationFromFile.cpp  TestIDFromFile.cpp  TestIKFromFile.cpp  TestIKIMUFromFile.cpp  TestJRFromFile.cpp  TestMarkerReconstruction.cpp  TestPLFromFile.cpp  TestRTExtFromFile.cpp  TestRTFromFile.cpp  TestRTLFromFile.cpp  TestSOFromFile.cpp
OpenSimRT/RealTime/tests/experimental/: TestAccelerationGRFMPredictionFromFile.cpp  TestContactForceGRFMPredictionFromFile.cpp  TestMarkerReconstruction.cpp  TestRTExtFromFile.cpp
OpenSimRT/Vicon/: CMakeLists.txt
cmake/: CMakeHelpers.cmake  Config.cmake.in
data/: README.md  setup.ini
data/esther/: Esther_Hamn.osim  Geometry
data/gait1848/: gait1848.osim  subject01_marker_set.xml  subject01_scaled.osim  subject01_setup_id.xml  subject01_setup_ik.xml  subject01_setup_jra.xml  subject01_setup_ka.xml  subject01_setup_scale.xml  subject01_setup_so.xml  subject01_walk1_grf.xml  subject01_walk1_resumpled.trc
data/gait1848/real_time/moment_arm/code_generation/: CMakeLists.txt  MomentArm.cpp  TestMomentArmGait1848.cpp
data/gait1848/real_time/moment_arm/code_generation/cmake/: CMakeHelpers.cmake
data/gait1992/: README.md
data/geometry_mobl/: 1mc.vtp  2distph.vtp  2mc.vtp  2midph.vtp  2proxph.vtp  3distph.vtp  3mc.vtp  3midph.vtp  3proxph.vtp  4distph.vtp  4mc.vtp  4midph.vtp  4proxph.vtp  5distph.vtp  5mc.vtp  5midph.vtp  5proxph.vtp  Cube.vtp  arm_r_1mc.vtp  arm_r_2distph.vtp  arm_r_2midph.vtp  arm_r_3mc.vtp  arm_r_3midph.vtp  arm_r_4distph.vtp  arm_r_4mc.vtp  arm_r_humerus.vtp  arm_r_pisiform.vtp  arm_r_thumbprox.vtp  arm_r_trapezoid.vtp  arm_r_triquetrum.vtp  arrow.vtp  axes.vtp  bofoot.vtp  box.vtp  bucket.vtp  calcaneous_lv.vtp  calcaneous_rv.vtp  capitate.vtp  capitate_lvs.vtp  cerv1sm.vtp  (+157 more)
data/geometry_v3.3/: ConePendulum.vtp  Cube.vtp  anchor1.vtp  anchor2.vtp  arm_r_2mc.vtp  arm_r_2proxph.vtp  arm_r_3distph.vtp  arm_r_3proxph.vtp  arm_r_4midph.vtp  arm_r_4proxph.vtp  arm_r_5distph.vtp  arm_r_5mc.vtp  arm_r_5midph.vtp  arm_r_5proxph.vtp  arm_r_capitate.vtp  arm_r_hamate.vtp  arm_r_lunate.vtp  arm_r_radius.vtp  arm_r_scaphoid.vtp  arm_r_thumbdist.vtp  arm_r_trapezium.vtp  arm_r_ulna.vtp  arrow.vtp  axes.vtp  big_block_centered.vtp  block.vtp  bofoot.vtp  box.vtp  capitate_rvs.vtp  cerv1.vtp  cerv2.vtp  cerv2sm.vtp  cerv3.vtp  cerv3sm.vtp  cerv4sm.vtp  cerv5sm.vtp  cerv6.vtp  cerv6sm.vtp  checkered_floor.vtp  clavicle_lv.vtp  (+160 more)
data/mobl2016/: Geometry  README.md  imu_test.trc  mobl2016_v01.osim  mobl2016_v02.osim  mobl2016_v03.osim  mobl2016_v04.osim
dependencies/: build_opensim-core  build_oscpack  build_vicon_data_stream_sdk
doc/: CMakeLists.txt  Doxyfile.in
doc/man/: pipeline.tex
scripts/: test_low_pass_smooth_filter.py  utils.py
(+422 files in other folders)
